--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     
 <div class = "pageContainer">
     <div class = "header" ng-controller="NavCtrl">
-        <div class = "pageTitle"><a href = "#/home">VoteCaster</a></div>
+        <div class = "pageTitle"><a href = "#/home">BookTrade</a></div>
         <div ng-hide = "isLoggedIn()" class = "headButton"><a href  = "#/login">Log In</a></div>
         <div ng-hide = "isLoggedIn()" class = "headButton"><a href  = "#/register">Register</a></div>
         <div ng-show = "isLoggedIn()" class = "headButton"><a href  = "" ng-click = "logOut()">Log Out</a></div>
