--- a/public/css/style.css
+++ b/public/css/style.css
@@ -258,7 +258,7 @@ a:active {
     margin: auto;
 }
 
-.thisOption, .outline {
+.outline {
     position: relative;
     display: inline-block;
     text-align: left;
@@ -285,6 +285,17 @@ a:active {
 
 .outline:focus, .bigOutline:focus {
     outline: none;
+}
+
+.thisOption {
+    position: relative;
+    display: inline-block;
+    text-align: left;
+    padding: 7px;
+    margin: auto;
+    margin: 2px;
+    font-size: 18px;
+    border: 1px solid #777777;
 }
 
 .thisOption:hover {
